--- a/VerilogBasics/impl/project_process_config.json
+++ b/VerilogBasics/impl/project_process_config.json
@@ -16,11 +16,11 @@
  "Fanout_Guide" : 10000,
  "Frequency" : "Auto",
  "Generate_Constraint_File_of_Ports" : false,
- "Generate_IBIS_File" : false,
- "Generate_Plain_Text_Timing_Report" : false,
- "Generate_Post_PNR_Simulation_Model_File" : false,
- "Generate_Post_Place_File" : false,
- "Generate_SDF_File" : false,
+ "Generate_IBIS_File" : true,
+ "Generate_Plain_Text_Timing_Report" : true,
+ "Generate_Post_PNR_Simulation_Model_File" : true,
+ "Generate_Post_Place_File" : true,
+ "Generate_SDF_File" : true,
  "GwSyn_Loop_Limit" : 2000,
  "HOTBOOT" : false,
  "I2C" : false,
@@ -62,17 +62,17 @@
  "SECURITY_BIT" : true,
  "SPI_FLASH_ADDR" : "00000000",
  "SSPI" : false,
- "Show_All_Warnings" : false,
+ "Show_All_Warnings" : true,
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
- "TopModule" : "src/Top.v",
+ "TopModule" : "TopModule",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
  "Use_Clock_Period_for_Unconstrainted IO" : false,
  "Use_SCF" : false,
  "VHDL_Standard" : "VHDL_Std_2008",
- "Verilog_Standard" : "Vlg_Std_Sysv2017",
+ "Verilog_Standard" : "Vlg_Std_2001",
  "WAKE_UP" : "0",
  "Write_Vendor_Constraint_File" : true,
  "dsp_balance" : false,
